--- a/pom.xml
+++ b/pom.xml
@@ -40,4 +40,14 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <finalName>hello</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.4.5</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
